--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "google-spreadsheet": "^3.3.0",
+    "joi": "^17.7.1",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
